<resources>
    <string name="app_name">ShopApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="if_already_a_member">Already a member? Log in</string>
    <string name="if_not_account_register">New user? Sing up here</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="drawer_menu_text">drawer menu text</string>
    <string name="my_feed">My Feed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="about">About</string>
    <string name="my_carts">My Carts</string>
    <string name="track_orders">Track Orders</string>
    <string name="favorites">favorites</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="drawer">drawer</string>
    <string name="search">Search</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="add_your_card">Add your Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="add_location">Add Location</string>
    <string name="add_your_address">Add your Address</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="title_select_image">Select Image</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">gallery</string>
    <string name="msg_turned_off_permissions">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings</string>
</resources>