<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="37dp"
    tools:context=".ui.user.profile.ProfileFragment">

    <TextView
        android:id="@+id/tvUploadPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/upload_profile_picture"
        android:textAlignment="center"
        android:textColor="@color/Selected_field"
        android:layout_marginTop="60dp"
        android:textSize="17sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="55dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUploadPhoto"
        app:shapeAppearanceOverlay="@style/Circular"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="34dp"
        android:layout_height="29dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
        app:layout_constraintEnd_toEndOf="@+id/ivProfilePicture" />

    <TextView
        android:id="@+id/btnSetUserImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/choose_photo"
        android:textAlignment="center"
        android:visibility="visible"
        android:textSize="17sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePicture" />

    <TextView
        android:id="@+id/tvAddCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/add_your_card"
        android:textAlignment="center"
        android:textColor="@color/Selected_field"
        android:textSize="17sp"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSetUserImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout0"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAddCard"
        tools:layout_editor_absoluteX="37dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/card_holder_name"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout0"
        tools:layout_editor_absoluteX="37dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/security_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/expiry_date"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/add_location"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/Selected_field"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        tools:layout_editor_absoluteX="57dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout4"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/add_your_address"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation"
        tools:layout_editor_absoluteX="37dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:textSize="17sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout4"
        tools:layout_editor_absoluteX="37dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCompleteProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/roboto"
        android:paddingVertical="8dp"
        android:text="@string/complete_profile"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="66dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>