<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tbcacademy.shopapp.ui.wall.WallFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_wall" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tbcacademy.shopapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tbcacademy.shopapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.tbcacademy.shopapp.ui.user.profile.ProfileFragment"
        android:label="profile_fragment"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/userPostsFragment"
        android:name="com.tbcacademy.shopapp.ui.user.userposts.UserPostsFragment"
        android:label="user_posts_fragment"
        tools:layout="@layout/user_posts_fragment" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.tbcacademy.shopapp.ui.user.about.AboutFragment"
        android:label="about_fragment"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@+id/userCartsFragment"
        android:name="com.tbcacademy.shopapp.ui.user.usercarts.UserCartsFragment"
        android:label="user_carts_fragment"
        tools:layout="@layout/user_carts_fragment" />
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.tbcacademy.shopapp.ui.orders.OrdersFragment"
        android:label="orders_fragment"
        tools:layout="@layout/orders_fragment" />
</navigation>